[metadata]
name = keras-list-mapper
version = 0.0.1
author = Pedro Marques
author_email = pedro.r.marques@gmail.com
description = Keras RaggedTensor Mapper
url = https://github.com/pedro-r-marques/keras-list-mapper

[options]
packages = keras_list_mapper
python_requires = >=3.7

[options.extras_require]
cpu =
    tensorflow-cpu>=2.4
gpu =
    tensorflow>=2.4
test =
    flake8
    pytest
    pytest-isort

[flake8]
max-line-length = 127
